WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301780
[ Tahoe ] TestWebKitAPI.SwitchInputTests.HapticFeedbackOnDrag is a constant timeout
https://bugs.webkit.org/show_bug.cgi?id=301780
Summary
[ Tahoe ] TestWebKitAPI.SwitchInputTests.HapticFeedbackOnDrag is a constant t...
Robert Jenner
Reported
2025-10-31 14:48:30 PDT
TestWebKitAPI.SwitchInputTests.HapticFeedbackOnDrag is a constant timeout on Tahoe only. HISTORY:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.SwitchInputTests.HapticFeedbackOnDrag
TIMEOUT TEXT: "name": "TestWebKitAPI.SwitchInputTests.HapticFeedbackOnDrag", "output": "2025-10-31 13:47:16.015 TestWebKitAPI[31002:7096313] NSEventConcurrentProcessingEnabled=NO"
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-31 14:48:48 PDT
<
rdar://problem/163821239
>
Robert Jenner
Comment 2
2025-10-31 14:50:40 PDT
I was able to reproduce the timeout on Tahoe Debug ToT running the test as follows: run-api-tests --debug TestWebKitAPI.SwitchInputTests.HapticFeedbackOnDrag According to the history, this test was timing out on Tahoe from when we started testing it. It is not a constant timeout on any other versions of macOS.
Aditya Keerthi
Comment 3
2025-10-31 16:26:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/53285
EWS
Comment 4
2025-11-01 11:01:32 PDT
Committed
302436@main
(883d4b3eff54): <
https://commits.webkit.org/302436@main
> Reviewed commits have been landed. Closing PR #53285 and removing active labels.
Alexey Proskuryakov
Comment 5
2025-11-02 14:52:21 PST
***
Bug 301779
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug