[ Tahoe ] TestWebKitAPI.SwitchInputTests.HapticFeedbackOnDrag is a constant timeout https://bugs.webkit.org/show_bug.cgi?id=301780 rdar://163821239

Reviewed by Wenson Hsieh and Abrar Rahman Protyasha.

SwitchInputTests.HapticFeedbackOnDrag is timing out on OpenSource builds only
due to a difference in layout from Internal builds. The test relies on a
specific switch size.

Fix by adjusting the height of the switch on OpenSource builds to match the
native switch height.

* Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm:

Canonical link: https://commits.webkit.org/302436@main